<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/nav_my_mall"
        android:name="com.techakram.Online_Shop.ui.home.My_Mall_Fragment"
        android:label="@string/menu_mall"
        tools:layout="@layout/fragment_home" >
    </fragment>

    <fragment
        android:id="@+id/nav_order"
        android:name="com.techakram.Online_Shop.ui.gallery.GalleryFragment"
        android:label="@string/menu_order"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_reward"
        android:name="com.techakram.Online_Shop.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_reward"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_cart"
        android:name="com.techakram.Online_Shop.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_my_cart" />
    <fragment
        android:id="@+id/nav_wishlist"
        android:name="com.techakram.Online_Shop.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_wishlist"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_account"
        android:name="com.techakram.Online_Shop.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.techakram.Online_Shop.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_slideshow" />

</navigation>