<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/main_search"
        android:orderInCategory="100"
        android:icon="@mipmap/main_search"
        android:title="@string/action_search"
        app:showAsAction="always" />
    <item
        android:id="@+id/main_notification"
        android:orderInCategory="100"
        android:icon="@mipmap/main_notificatio"
        android:title="@string/action_notification"
        app:showAsAction="always" />
    <item
        android:id="@+id/main_cart"
        android:orderInCategory="100"
        android:icon="@mipmap/main_cart"
        android:title="@string/action_cart"
        app:showAsAction="always" />
</menu>